# tasks

./: .gitignore
.github/workflows/: api.yml  destroy.yml  ui.yml
services/tasks_api/: config.py  main.py  models.py  pyproject.toml  schemas.py  serverless.yml  store.py  tests.py
services/tasks_api/resources/: cognito.yml  dynamodb.yml
services/tasks_ui/: package-lock.json  package.json  serverless.yml
services/tasks_ui/src/: aws-exports.js
