[tool.poetry]
name = "tasks-api"
version = "0.1.0"
description = ""
authors = ["puneeth-y-s <yspuneeth1994@gmail.com>"]
readme = "README.md"
packages = [{ include = "tasks_api" }]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.117.1,<0.118.0"
uvicorn = ">=0.36.0,<0.37.0"
httpx = ">=0.28.1,<0.29.0"
mangum = "^0.19.0"
boto3 = "^1.40.37"
pyjwt = "^2.10.1"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.2,<9.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
black = ">=25.9.0,<26.0.0"
isort = ">=6.0.1,<7.0.0"
flake8 = ">=7.3.0,<8.0.0"
bandit = ">=1.8.6,<2.0.0"
moto = "^5.1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
